# CodeReview-AI-

./: README.md
app/: Dockerfile  docker-compose.yml  pyproject.toml
app/api/: endpoints.py  main.py
app/exceptions/: excpetions.py  github_api_error_handler.py  openai_error_handler.py
app/models/: repository_models.py  request_models.py
app/services/configs/: config.py
app/services/github/: github_access.py
app/services/openai/: openai_service.py
app/services/review/: review_service.py
app/tests/: test_endpoint.py
app/tests/models/: test_request_models.py  test_response_models.py
app/utils/logging_config/: logging_config.py
app/utils/redis_cache/: redis_utils.py
